--- a/README
+++ b/README
@@ -3,3 +3,18 @@ This is a work in progress -- coming soon
 "Eye dropper"-style color picker: pick a color from an image
 
 Uses canvas; IE not supported
+
+NOTE: image has to be in same domain name (canvas security ref)
+
+Flickr images used in demo
+
+licensed Creative Commons, Attribution-Share Alike 2.0 - http://creativecommons.org/licenses/by-sa/2.0/deed.en
+
+Colorful glass
+http://www.flickr.com/photos/lexrex/447627949/
+
+The only way to see the rainbow is to look through the rain! by somogyibarbara
+http://www.flickr.com/photos/somogyibarbara/3229357802/
+
+Colorful tulips by deapeajay
+http://www.flickr.com/photos/deapeajay/2399982682/
